tests/snapshots/snapshots__fixture_log.snap
---
source: tests/snapshots.rs
expression: output
---
__private_api.rs
    10→pub type Value
    12→mod sealed
    14→    pub trait KVs
    15→        fn into_kvs
    21→impl<'a> KVs<'a> for &'a [(&'a str, Value<'a>)]
    23→    fn into_kvs
    28→impl<'a> KVs<'a> for ()
    30→    fn into_kvs
    39→pub struct GlobalLogger
    41→impl Log for GlobalLogger
    42→    fn enabled
    46→    fn log
    50→    fn flush
    56→fn log_impl
    84→pub fn log
   103→pub fn enabled
   108→pub fn loc
   113→mod kv_support
   116→    pub type Value
   122→    pub fn capture_to_value
   126→    pub fn capture_debug
   130→    pub fn capture_display
   135→    pub fn capture_error
   140→    pub fn capture_sval
   145→    pub fn capture_serde
kv/error.rs
     5→pub struct Error
    10→enum Inner
    19→impl Error
    21→    pub fn msg
    29→    pub(super) fn from_value
    37→    pub(super) fn into_value
    48→impl fmt::Display for Error
    49→    fn fmt
    62→impl From<fmt::Error> for Error
    63→    fn from
    69→mod std_support
    73→    pub(super) type BoxedError
    75→    impl Error
    77→        pub fn boxed
    87→    impl error::Error for Error
    89→    impl From<io::Error> for Error
    90→        fn from
kv/key.rs
     7→pub trait ToKey
     9→    fn to_key
    12→impl<T> ToKey for &T
    16→    fn to_key
    21→impl<'k> ToKey for Key<'k>
    22→    fn to_key
    27→impl ToKey for str
    28→    fn to_key
    37→pub struct Key
    42→impl<'k> Key<'k>
    45→    pub fn from_str
    53→    pub fn as_str
    61→    pub fn to_borrowed_str
    69→impl<'k> fmt::Display for Key<'k>
    70→    fn fmt
    75→impl<'k> AsRef<str> for Key<'k>
    76→    fn as_ref
    81→impl<'k> Borrow<str> for Key<'k>
    82→    fn borrow
    87→impl<'k> From<&'k str> for Key<'k>
    88→    fn from
    94→mod std_support
    99→    impl ToKey for String
   100→        fn to_key
   105→    impl<'a> ToKey for Cow<'a, str>
   106→        fn to_key
   113→mod sval_support
   119→    impl<'a> Value for Key<'a>
   120→        fn stream
   128→    impl<'a> ValueRef<'a> for Key<'a>
   129→        fn stream_ref
   136→mod serde_support
   141→    impl<'a> Serialize for Key<'a>
   142→        fn serialize
kv/mod.rs
   246→mod error
   247→mod key
   250→mod source
   252→mod value
   260→pub mod source
   262→pub mod value
kv/source.rs
    51→pub trait Source
    62→    fn visit
    73→    fn get
    85→    fn count
    91→fn get_default
   114→fn count_default
   130→impl<T> Source for &T
   134→    fn visit
   138→    fn get
   142→    fn count
   147→impl<K, V> Source for (K, V)
   152→    fn visit
   156→    fn get
   164→    fn count
   169→impl<S> Source for [S]
   173→    fn visit
   181→    fn get
   191→    fn count
   196→impl<const N: usize, S> Source for [S; N]
   200→    fn visit
   204→    fn get
   208→    fn count
   213→impl<S> Source for Option<S>
   217→    fn visit
   225→    fn get
   229→    fn count
   235→pub trait VisitSource
   237→    fn visit_pair
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   245→    fn visit_pair
   250→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugMap<'a, 'b>
   251→    fn visit_pair
   257→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugList<'a, 'b>
   258→    fn visit_pair
   264→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugSet<'a, 'b>
   265→    fn visit_pair
   271→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugTuple<'a, 'b>
   272→    fn visit_pair
   280→mod std_support
   288→    impl<S> Source for Box<S>
   292→        fn visit
   296→        fn get
   300→        fn count
   305→    impl<S> Source for Arc<S>
   309→        fn visit
   313→        fn get
   317→        fn count
   322→    impl<S> Source for Rc<S>
   326→        fn visit
   330→        fn get
   334→        fn count
   339→    impl<S> Source for Vec<S>
   343→        fn visit
   347→        fn get
   351→        fn count
   356→    impl<'kvs, V> VisitSource<'kvs> for Box<V>
   360→        fn visit_pair
   365→    impl<K, V, S> Source for HashMap<K, V, S>
   371→        fn visit
   378→        fn get
   382→        fn count
   387→    impl<K, V> Source for BTreeMap<K, V>
   392→        fn visit
   399→        fn get
   403→        fn count
kv/value.rs
    11→pub trait ToValue
    13→    fn to_value
    16→impl<T> ToValue for &T
    20→    fn to_value
    25→impl<'v> ToValue for Value<'v>
    26→    fn to_value
   119→pub struct Value
   123→impl<'v> Value<'v>
   125→    pub fn from_any
   133→    pub fn from_debug
   143→    pub fn from_display
   154→    pub fn from_serde
   165→    pub fn from_sval
   175→    pub fn from_dyn_debug
   182→    pub fn from_dyn_display
   190→    pub fn from_dyn_error
   197→    pub fn null
   204→    fn from_inner
   217→    pub fn visit
   222→impl<'v> fmt::Debug for Value<'v>
   223→    fn fmt
   228→impl<'v> fmt::Display for Value<'v>
   229→    fn fmt
   235→impl<'v> serde_core::Serialize for Value<'v>
   236→    fn serialize
   245→impl<'v> sval::Value for Value<'v>
   246→    fn stream
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v>
   253→    fn stream_ref
   258→impl ToValue for str
   259→    fn to_value
   264→impl<'v> From<&'v str> for Value<'v>
   265→    fn from
   270→impl ToValue for ()
   271→    fn to_value
   276→impl<T> ToValue for Option<T>
   280→    fn to_value
   288→macro_rules! impl_to_value_primitive
   312→macro_rules! impl_to_value_nonzero_primitive
   336→macro_rules! impl_value_to_primitive
   376→impl<'v> Value<'v>
   379→    pub fn to_borrowed_error
   384→    pub fn to_borrowed_str
   390→mod std_support
   397→    impl<T> ToValue for Box<T>
   401→        fn to_value
   406→    impl<T> ToValue for Arc<T>
   410→        fn to_value
   415→    impl<T> ToValue for Rc<T>
   419→        fn to_value
   424→    impl ToValue for String
   425→        fn to_value
   430→    impl<'v> ToValue for Cow<'v, str>
   431→        fn to_value
   436→    impl<'v> Value<'v>
   438→        pub fn to_cow_str
   443→    impl<'v> From<&'v String> for Value<'v>
   444→        fn from
   462→pub trait VisitValue
   469→    fn visit_any
   472→    fn visit_null
   477→    fn visit_u64
   482→    fn visit_i64
   487→    fn visit_u128
   492→    fn visit_i128
   497→    fn visit_f64
   502→    fn visit_bool
   507→    fn visit_str
   512→    fn visit_borrowed_str
   517→    fn visit_char
   524→    fn visit_error
   530→    fn visit_borrowed_error
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   543→    fn visit_any
   547→    fn visit_null
   551→    fn visit_u64
   555→    fn visit_i64
   559→    fn visit_u128
   563→    fn visit_i128
   567→    fn visit_f64
   571→    fn visit_bool
   575→    fn visit_str
   579→    fn visit_borrowed_str
   583→    fn visit_char
   588→    fn visit_error
   593→    fn visit_borrowed_error
   602→pub(in crate::kv) mod inner
   619→    pub fn visit
   721→pub(in crate::kv) mod inner
   738→    pub enum Inner
   752→    impl<'v> From<()> for Inner<'v>
   753→        fn from
   758→    impl<'v> From<bool> for Inner<'v>
   759→        fn from
   764→    impl<'v> From<char> for Inner<'v>
   765→        fn from
   770→    impl<'v> From<f32> for Inner<'v>
   771→        fn from
   776→    impl<'v> From<f64> for Inner<'v>
   777→        fn from
   782→    impl<'v> From<i8> for Inner<'v>
   783→        fn from
   788→    impl<'v> From<i16> for Inner<'v>
   789→        fn from
   794→    impl<'v> From<i32> for Inner<'v>
   795→        fn from
   800→    impl<'v> From<i64> for Inner<'v>
   801→        fn from
   806→    impl<'v> From<isize> for Inner<'v>
   807→        fn from
   812→    impl<'v> From<u8> for Inner<'v>
   813→        fn from
   818→    impl<'v> From<u16> for Inner<'v>
   819→        fn from
   824→    impl<'v> From<u32> for Inner<'v>
   825→        fn from
   830→    impl<'v> From<u64> for Inner<'v>
   831→        fn from
   836→    impl<'v> From<usize> for Inner<'v>
   837→        fn from
   842→    impl<'v> From<i128> for Inner<'v>
   843→        fn from
   848→    impl<'v> From<u128> for Inner<'v>
   849→        fn from
   854→    impl<'v> From<&'v str> for Inner<'v>
   855→        fn from
   860→    impl<'v> fmt::Debug for Inner<'v>
   861→        fn fmt
   878→    impl<'v> fmt::Display for Inner<'v>
   879→        fn fmt
   896→    impl<'v> Inner<'v>
   897→        pub fn from_debug
   901→        pub fn from_display
   905→        pub fn from_dyn_debug
   909→        pub fn from_dyn_display
   913→        pub fn empty
   917→        pub fn to_bool
   924→        pub fn to_char
   931→        pub fn to_f64
   954→        pub fn to_i64
   964→        pub fn to_u64
   974→        pub fn to_u128
   984→        pub fn to_i128
   994→        pub fn to_borrowed_str
  1031→    pub fn visit
  1051→impl<'v> Value<'v>
  1055→    pub fn capture_debug
  1065→    pub fn capture_display
  1075→    pub fn capture_error
  1085→    pub fn capture_serde
  1095→    pub fn capture_sval
  1107→    pub fn is
  1116→    pub fn downcast_ref
  1129→macro_rules! as_debug
  1139→macro_rules! as_display
  1149→macro_rules! as_error
  1159→macro_rules! as_serde
  1169→macro_rules! as_sval
lib.rs
   406→mod macros
   407→mod serde
   410→pub mod kv
   421→struct AtomicUsize
   426→impl AtomicUsize
   427→    const fn new
   431→    fn load
   435→    fn store
   443→unsafe impl Sync for AtomicUsize
   447→static mut LOGGER
   449→static STATE
   454→const UNINITIALIZED
   455→const INITIALIZING
   456→const INITIALIZED
   458→static MAX_LOG_LEVEL_FILTER
   460→static LOG_LEVEL_NAMES
   462→static SET_LOGGER_ERROR
   464→static LEVEL_PARSE_ERROR
   475→pub enum Level
   501→impl PartialEq<LevelFilter> for Level
   503→    fn eq
   508→impl PartialOrd<LevelFilter> for Level
   510→    fn partial_cmp
   515→impl FromStr for Level
   516→    type Err
   517→    fn from_str
   528→impl fmt::Display for Level
   529→    fn fmt
   534→impl Level
   535→    fn from_usize
   548→    pub fn max
   554→    pub fn to_level_filter
   561→    pub fn as_str
   579→    pub fn iter
   599→    pub fn increment_severity
   620→    pub fn decrement_severity
   636→pub enum LevelFilter
   651→impl PartialEq<Level> for LevelFilter
   653→    fn eq
   658→impl PartialOrd<Level> for LevelFilter
   660→    fn partial_cmp
   665→impl FromStr for LevelFilter
   666→    type Err
   667→    fn from_str
   678→impl fmt::Display for LevelFilter
   679→    fn fmt
   684→impl LevelFilter
   685→    fn from_usize
   699→    pub fn max
   707→    pub fn to_level
   714→    pub fn as_str
   732→    pub fn iter
   752→    pub fn increment_severity
   774→    pub fn decrement_severity
   781→enum MaybeStaticStr
   786→impl<'a> MaybeStaticStr<'a>
   788→    fn get
   842→pub struct Record
   858→struct KeyValues
   861→impl<'a> fmt::Debug for KeyValues<'a>
   862→    fn fmt
   869→impl<'a> Record<'a>
   872→    pub fn builder
   878→    pub fn args
   884→    pub fn metadata
   890→    pub fn level
   896→    pub fn target
   902→    pub fn module_path
   908→    pub fn module_path_static
   917→    pub fn file
   923→    pub fn file_static
   932→    pub fn line
   939→    pub fn key_values
   946→    pub fn to_builder
  1003→pub struct RecordBuilder
  1007→impl<'a> RecordBuilder<'a>
  1021→    pub fn new
  1037→    pub fn args
  1044→    pub fn metadata
  1051→    pub fn level
  1058→    pub fn target
  1065→    pub fn module_path
  1072→    pub fn module_path_static
  1079→    pub fn file
  1086→    pub fn file_static
  1093→    pub fn line
  1101→    pub fn key_values
  1108→    pub fn build
  1113→impl Default for RecordBuilder<'_>
  1114→    fn default
  1158→pub struct Metadata
  1163→impl<'a> Metadata<'a>
  1166→    pub fn builder
  1172→    pub fn level
  1178→    pub fn target
  1200→pub struct MetadataBuilder
  1204→impl<'a> MetadataBuilder<'a>
  1212→    pub fn new
  1223→    pub fn level
  1230→    pub fn target
  1237→    pub fn build
  1242→impl Default for MetadataBuilder<'_>
  1243→    fn default
  1249→pub trait Log
  1262→    fn enabled
  1271→    fn log
  1279→    fn flush
  1283→struct NopLogger
  1285→impl Log for NopLogger
  1286→    fn enabled
  1290→    fn log
  1291→    fn flush
  1294→impl<T> Log for &'_ T
  1298→    fn enabled
  1302→    fn log
  1305→    fn flush
  1311→impl<T> Log for std::boxed::Box<T>
  1315→    fn enabled
  1319→    fn log
  1322→    fn flush
  1328→impl<T> Log for std::sync::Arc<T>
  1332→    fn enabled
  1336→    fn log
  1339→    fn flush
  1351→pub fn set_max_level
  1375→pub unsafe fn set_max_level_racy
  1396→pub fn max_level
  1420→pub fn set_boxed_logger
  1478→pub fn set_logger
  1483→fn set_logger_inner
  1529→pub unsafe fn set_logger_racy
  1549→pub struct SetLoggerError
  1551→impl fmt::Display for SetLoggerError
  1552→    fn fmt
  1559→impl error::Error for SetLoggerError
  1566→pub struct ParseLevelError
  1568→impl fmt::Display for ParseLevelError
  1569→    fn fmt
  1576→impl error::Error for ParseLevelError
  1581→pub fn logger
  1600→pub mod __private_api
  1611→pub const STATIC_MAX_LEVEL
macros.rs
    75→macro_rules! log
   119→macro_rules! __log
   165→macro_rules! error
   204→macro_rules! warn
   252→macro_rules! info
   292→macro_rules! debug
   336→macro_rules! trace
   391→macro_rules! log_enabled
   415→macro_rules! __log_enabled
   429→macro_rules! __log_logger
   445→macro_rules! __log_key
   459→macro_rules! __log_key
   468→macro_rules! __log_value
   517→macro_rules! __log_value
   526→macro_rules! __log_value_sval
   535→macro_rules! __log_value_sval
   544→macro_rules! __log_value_serde
   553→macro_rules! __log_value_serde
   564→macro_rules! __log_value_error
   573→macro_rules! __log_value_error
serde.rs
    16→impl Serialize for Level
    17→    fn serialize
    31→impl<'de> Deserialize<'de> for Level
    32→    fn deserialize
   110→impl Serialize for LevelFilter
   111→    fn serialize
   126→impl<'de> Deserialize<'de> for LevelFilter
   127→    fn deserialize
